@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Require PromptIfStale 0.056. That version skips all local plugins when
+  checking for staleness. This lets me revert the change in 1.07.
+
+
 1.07     2020-04-26
 
 - Make the PromptIfStale plugin skip all inc::* packages that live in the inc/
